--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
 .login-button {
   width: 50%;
   padding: 16px 36px;
-  margin-top: 10px;
+  margin-top: 30px;
   margin-left: 10px;
   font-weight: bold;
   color: #fff;
@@ -373,7 +373,10 @@ body {
   transform: scale(0.98);
 }
 
-#emptyLogin , #loginResult {
+#emptyResult , #loginResult {
   color: darkred;
   font-weight: bold;
+  font-size: smaller;
+  margin-top: -3.7vh;
+  margin-left: 15%;
 }
