--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
-.login-h1 {
+/* .login-h1 {
   text-align: center;
   margin-bottom: 36px;
 }
@@ -64,21 +64,20 @@ body {
   to {
     background-position: 200% center;
   }
-}
+} */
 
 .username-holder {
-  margin-top: 54px;
+  margin-top: 10px;
   margin-bottom: 25px;
 }
 
 .password-holder {
-  margin-top: 18px;
-  margin-bottom: 36px;
+  margin-bottom: 30px;
 }
 
 .username-holder,
 .password-holder {
-  display: block;
+  display: inline-block;
   width: 50%;
   padding: 10px;
   border-radius: 4px;
@@ -119,16 +118,32 @@ body {
 }
 
 .container {
-  width: 60%;
-  max-width: 60%;
+  width: 600px;
+  max-width: 600px;
 
-  max-height: 400px;
+  /* max-height: 400px; */
 
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
   border-radius: 6px;
   background-color: #fff;
 
   padding: 70px;
+  padding-top: 20px;
+  position: relative;
+}
+
+.welcom-h1 {
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  display: inline-block;
+  padding: 30px 0;
+  color: #444;
+
+  font-size: 30px;
+
+  margin: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
   position: relative;
 }
 
@@ -136,31 +151,28 @@ body {
 .add-h1 {
   font-family: "Quicksand", sans-serif;
 
-  font-size: 36px;
-  margin: 10px;
+  font-size: 30px;
+  margin: 10px 0;
 }
 
-.search-h1 {
-  padding-left: 25px;
-}
 .add-h1 {
-  padding-left: 50px;
   padding-top: 10px;
 }
 
 .add-button,
 .search-button {
   font-family: "Quicksand", sans-serif;
+  margin-top: 25px;
 }
 
 .search-button {
   margin-bottom: 15px;
 }
 
-.search-color-holder,
-.add-color-holder {
-  display: block;
-  width: 25%;
+.search-in-holder,
+.add-in-holder {
+  display: inline-block;
+  width: 50%;
   padding: 10px;
   border-radius: 4px;
   border: 1px solid #ddd;
@@ -170,18 +182,17 @@ body {
   font-size: 18px;
 }
 
-.search-color-holder:focus,
-.add-color-holder:focus {
+.search-in-holder:focus,
+.add-in-holder:focus {
   border-color: #f34841;
   background: #fff;
 }
 
 .search-button,
 .add-button {
-  width: 20%;
+  width: 45%;
   padding: 16px 36px;
-  margin-top: 15px;
-  margin-left: 30px;
+
   font-weight: bold;
   color: #fff;
   border-radius: 4px;
@@ -205,12 +216,12 @@ body {
   transform: scale(0.98);
 }
 
-.add-butto:active {
+.add-button:active {
   transform: scale(0.98);
 }
 
-.search-color-holder,
-.add-color-holder,
+.search-in-holder,
+.add-in-holder,
 .search-button {
   font-family: "Quicksand", sans-serif;
 }
@@ -304,11 +315,10 @@ body {
   display: block;
 }
 
-@media screen and (max-width: 511px){
+@media screen and (max-width: 511px) {
   .sign-up-container {
     height: 500px;
   }
-
 }
 .create-h1 {
   font-family: "Quicksand", sans-serif;
@@ -318,7 +328,7 @@ body {
   text-align: center;
   display: block;
 }
-.firstName-signUp-holder, 
+.firstName-signUp-holder,
 .lastName-signUp-holder {
   width: 23%;
   padding: 10px;
@@ -328,9 +338,9 @@ body {
   background: #eee;
   transition: background 0.2s, border-color 0.2s;
   font-size: 18px;
-  margin-bottom: 20px; 
-  margin-left: .5vw;
-  margin-right: .5vw;
+  margin-bottom: 20px;
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
   margin-top: 1vh;
 }
 
@@ -358,7 +368,7 @@ body {
 .password-signUp-holder:focus,
 .firstName-signUp-holder:focus,
 .lastName-signUp-holder:focus,
-.password1-signUp-holder:focus{
+.password1-signUp-holder:focus {
   border-color: #f34841;
   background: #fff;
 }
@@ -383,8 +393,24 @@ body {
   text-align: center;
   font-family: "Quicksand", sans-serif;
 }
+.already-have-account {
+  font-family: "Quicksand", sans-serif;
+  font-size: 14px;
+}
+.link-already-have-account {
+  color: black;
+}
 
-.termStyle{
+.link-already-have-account:hover {
+  color: #da403a;
+  font-weight: bold;
+}
+
+.link-already-have-account:active {
+  transform: scale(0.98);
+}
+
+.termStyle {
   margin-top: 2px;
   font-size: xx-small;
 }
@@ -419,7 +445,7 @@ body {
   color: rgb(199, 5, 5);
   font-weight: lighter;
   font-size: 17px;
-  margin-left: .2%;
+  margin-left: 0.2%;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -437,10 +463,9 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
-#message{
+#message {
   margin-top: -3.7vh;
   height: 2vh;
-  
 }
 
 #message2 {
@@ -448,7 +473,6 @@ body {
   margin-bottom: 1vh;
   height: 1.5vh;
 }
-
 
 #isEmpty {
   color: rgb(199, 5, 5);
@@ -464,4 +488,97 @@ body {
   font-size: 17px;
   margin-left: 33%;
   font-family: "Quicksand", sans-serif;
+}
+
+.hidden-container {
+  width: 600px;
+  max-width: 600px;
+  height: 400px;
+  max-height: 400px;
+  margin: 18px;
+  padding: 36px;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+  background-color: #ffffff;
+  position: relative;
+}
+.name-hidden-holder,
+.email-hidden-holder,
+.phone-hidden-holder {
+  width: 40%;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  outline: none;
+  background: #eee;
+  transition: background 0.2s, border-color 0.2s;
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+
+.name-hidden-holder:focus,
+.email-hidden-holder:focus,
+.phone-hidden-holder:focus {
+  border-color: #f34841;
+  background: #fff;
+}
+.hidden-container p {
+  margin-bottom: 10px;
+  font-family: "Quicksand", sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.add-other-button {
+  width: 35%;
+  padding: 12px 24px;
+  color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+  outline: none;
+  background-color: #f34841;
+  border: none;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.add-other-button:hover {
+  background-color: #da403a; /*darker*/
+}
+
+.add-other-button:active {
+  transform: scale(0.98);
+}
+
+.search-result-container {
+  width: 450px;
+  max-width: 450px;
+  margin: 150px auto;
+}
+
+.search-result-container .search-input {
+  background-color: #fff;
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
+}
+
+.search-input input {
+  height: 55px;
+  width: 100%;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 0 60px 0 20px;
+  font-size: 18px;
+}
+
+.db-img {
+  width: 50px;
+  max-width: 50px;
+  position: absolute;
+  top: 20px;
+  margin-left: 10px;
 }
