--- a/css/style.css
+++ b/css/style.css
@@ -570,33 +570,116 @@ body {
   transform: scale(0.98);
 }
 
-.search-result-container {
-  width: 450px;
-  max-width: 450px;
-  margin: 150px auto;
-}
-
-.search-result-container .search-input {
-  background-color: #fff;
-  width: 100%;
-  border-radius: 5px;
-  box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.12);
-}
-
-.search-input input {
-  height: 55px;
-  width: 100%;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  padding: 0 60px 0 20px;
-  font-size: 18px;
-}
-
 .db-img {
   width: 50px;
   max-width: 50px;
   position: absolute;
   top: 20px;
   margin-left: 10px;
+}
+
+.search-result-container {
+  width: 100%;
+  max-width: 100%;
+
+  height: 80%;
+
+  margin: 18px;
+  padding: 36px;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+  background-color: #ffffff;
+  position: relative;
+}
+.Results-h1 {
+  font-family: "Quicksand", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+
+.table-results {
+  width: 100%;
+  max-width: 100%;
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: "Quicksand", sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.table-results thead th {
+  font-family: "Quicksand", sans-serif;
+  background-color: #f34841;
+  color: #ffffff;
+  text-align: left;
+  padding: 20px 23px;
+  font-weight: bold;
+}
+
+.table-results thead th:first-child {
+  border-radius: 10px 0 0 10px;
+}
+
+.table-results thead th:last-child {
+  border-radius: 0 10px 10px 0;
+}
+
+.table-results td,
+.table-results tr {
+  font-family: "Quicksand", sans-serif;
+  padding: 20px 23px;
+}
+.table-results tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.table-results tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.table-results tbody tr a {
+  text-decoration: none;
+  color: black;
+}
+
+.table-results tbody tr a:hover {
+  text-decoration: none;
+  color: #f34841;
+}
+
+.table-results tbody tr a:active {
+  transform: scale(0.98);
+}
+.delete-link {
+  text-decoration: underline !important;
+  color: #605e5e !important;
+}
+
+.delete-link:hover {
+  text-decoration: underline !important;
+  color: #f34841 !important;
+}
+
+.back-to-manager {
+  font-size: 26px;
+  font-family: "Quicksand", sans-serif;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  margin-left: 30px;
+  position: absolute;
+  left: 5px;
+  bottom: 10px;
+}
+
+.back-to-manager:hover {
+  color: #f34841;
+}
+
+.back-to-manager:active {
+  transform: scale(0.98);
 }
