--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,6 @@ body {
   padding-top: 10px;
 }
 
-.add-button,
 .search-button {
   font-family: "Quicksand", sans-serif;
   height: 2.7rem;
@@ -188,8 +187,7 @@ body {
   background: #fff;
 }
 
-.search-button,
-.add-button {
+.search-button {
   width: 45%;
   padding: 16px 36px;
 
@@ -205,6 +203,21 @@ body {
 }
 .add-button {
   margin-bottom: 25px;
+  width: 10rem;
+  margin-top: 4vh;
+  /* padding: 16px 36px; */
+
+  font-weight: bold;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+  background-color: #f34841;
+  border: none;
+  font-size: 18px;
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  height: 2.7rem;
 }
 
 .search-button:hover,
@@ -439,7 +452,7 @@ body {
   color: rgb(199, 5, 5);
   font-weight: lighter;
   font-size: 17px;
-  margin-left: 13%;
+  margin-left: -1rem;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -484,11 +497,35 @@ body {
   font-family: "Quicksand", sans-serif;
 }
 
+#notValidPassword {
+  color: rgb(199, 5, 5);
+  font-weight: lighter;
+  font-size: 17px;
+  margin-left: 35%;
+  font-family: "Quicksand", sans-serif;
+}
+
+#duplicateAccount {
+  color: rgb(199, 5, 5);
+  font-weight: lighter;
+  font-size: 17px;
+  margin-left: 20%;
+  font-family: "Quicksand", sans-serif;
+}
+
 #notValid {
   color: rgb(199, 5, 5);
   font-weight: lighter;
   font-size: 17px;
   margin-left: 33%;
+  font-family: "Quicksand", sans-serif;
+}
+
+#isSecure {
+  color: rgb(199, 5, 5);
+  font-weight: lighter;
+  font-size: 12px;
+  margin-left: 1%;
   font-family: "Quicksand", sans-serif;
 }
 
@@ -504,7 +541,6 @@ body {
   background-color: #ffffff;
   position: relative;
 }
-
 
 .email-hidden-holder,
 .phone-hidden-holder {
@@ -526,7 +562,6 @@ body {
 .lastName-hidden-holder,
 .firstName-hidden-holder {
   width: 25%;
-  display: inline;
   padding: 10px;
   border-radius: 4px;
   border: 1px solid #ddd;
@@ -536,26 +571,7 @@ body {
   font-size: 18px;
   margin-bottom: 20px;
 }
-.firstName-hidden-holder {
-  margin-right: 10px;
-}
 
-.lastName-hidden-holder,
-.firstName-hidden-holder {
-  width: 25%;
-  padding: 10px;
-  border-radius: 4px;
-  border: 1px solid #ddd;
-  outline: none;
-  background: #eee;
-  transition: background 0.2s, border-color 0.2s;
-  font-size: 18px;
-  margin-bottom: 20px;
-  margin-bottom: 20px;
-}
-
-.lastName-hidden-holder:focus,
-.firstName-hidden-holder:focus,
 .lastName-hidden-holder:focus,
 .firstName-hidden-holder:focus,
 .email-hidden-holder:focus,
@@ -565,13 +581,9 @@ body {
 }
 .hidden-h1 {
   margin-bottom: 25px;
-.hidden-h1 {
-  margin-bottom: 25px;
   font-family: "Quicksand", sans-serif;
   font-size: 40px;
-  font-size: 40px;
   font-weight: bold;
-  margin-top: 30px;
   margin-top: 30px;
 }
 
@@ -628,6 +640,7 @@ body {
 
 .output-table {
   border-radius: 4px;
+  width: 16.5rem;
 }
 
 
@@ -635,10 +648,8 @@ body {
   width: 100%;
   max-width: 100%;
   border-collapse: collapse;
-  /* margin: 25px 0; */
   font-size: 0.9em;
   font-family: "Quicksand", sans-serif;
-  /* min-width: 400px; */
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
@@ -651,7 +662,7 @@ body {
   font-family: "Quicksand", sans-serif;
   background-color: #f34841;
   color: #ffffff;
-  text-align: left;
+  text-align: center;
   padding: 20px 23px;
   font-weight: bold;
   border-radius: 4px;
@@ -668,7 +679,7 @@ body {
 .table-results td,
 .table-results tr {
   font-family: "Quicksand", sans-serif;
-  padding: 20px 23px;
+  padding: 10px 23px;
 }
 .table-results tbody tr {
   border-bottom: 1px solid #dddddd;
@@ -722,7 +733,7 @@ body {
 }
 
 .addContactDisplay {
-  display: none;
+  display: flex;
 
   flex-direction: column;
   justify-content: center;
@@ -751,17 +762,27 @@ body {
   display: contents;
 }
 
+.searchContactDisplay {
+  display: none;
+  flex-direction: row;
+  flex-shrink: 0;
+}
+
 .searchContactDisplayLeft {
   display: flex;
   flex-direction: column;
-  width: 10vw;
-  /* justify-content: center; */
-  /* align-items: center; */
+  width: 18.8rem;
+  margin-left: -0.10rem;
+  margin-right: 0.70rem;
+  /* margin-right: 1vw; */
+  /* margin-right: 18%; */
+  justify-content: center;
+  align-items: center;
 }
 
 .searchInput {
-  width: 15vw;
-  /* display: inline; */
+  width: 15rem;
+  /* display: flex; */
   padding: 10px;
   border-radius: 4px;
   border: 1px solid #ddd;
@@ -797,26 +818,125 @@ body {
   text-align: center;
   font-family: "Quicksand", sans-serif;
   /* margin-left: 3.5vw; */
-  margin-top: 1.4rem;
+  margin-top: 2.4rem;
   width: 8rem;
-  margin-left: 19%;
+  /* margin-left: 19%; */
 }
 
 .searchResults {
-  margin-left: 35%;
-  overflow-y: scroll;
+  display: flex;
+  /* overflow-y: scroll; */
   max-height: 50vh;
-  width: 140%
+  margin-top: 0rem;
+  font-family: "Quicksand", sans-serif;
 }
 
 .searchResults::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 }
 
 .contactContainer {
   margin-top: 25%;
-  display: none;
+  display: none; 
+  flex-direction: row;
   flex-direction: column; 
   justify-content: center; 
   align-items: center;
+}
+
+.addDisplayButton {
+  width: 50%;
+  padding: 4px 4px;
+  margin-right: 1rem;
+  font-weight: bold;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+  background-color: #f2a5a2;
+  border: none;
+  font-size: 18px;
+  z-index: 0;
+}
+
+.searchDisplayButton {
+  width: 50%;
+  padding: 4px 4px;
+  margin-right: 1rem;
+  font-weight: bold;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+  background-color: #f34841;
+  border: none;
+  font-size: 18px;
+  z-index: 0;
+}
+
+.resultTitle {
+  background-color: #f34841; 
+  border-radius: 4px;
+  height: 2.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactEdit, .contactDelete, .contactGoBack {
+    width: 50%;
+    padding: 8px 15px;
+    margin-right: 1rem;
+    font-weight: bold;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+    background-color: #eb3c36;
+    border: none;
+    font-size: 18px;
+}
+
+.contactEdit {
+  background-color: rgb(110, 61, 235);
+}
+
+.contactGoBack {
+  background-color: white;
+  color: black;
+  text-decoration: underline;
+  margin-left: 0rem;
+  padding: 8px 0px;
+}
+
+#duplicateContact {
+  color: rgb(199, 5, 5);
+  font-weight: lighter;
+  font-size: 17px;
+  font-family: "Quicksand", sans-serif;
+  margin-top: -5vh;
+  margin-bottom: -1vh;
+}
+
+#contactAddResult {
+  color: rgb(6, 160, 14);
+  font-weight: lighter;
+  font-size: 17px;
+  font-family: "Quicksand", sans-serif;
+  margin-top: -3vh;
+}
+
+#invalidFormat1 {
+  color: rgb(199, 5, 5);
+  font-weight: lighter;
+  font-size: 17px;
+  font-family: "Quicksand", sans-serif;
+  margin-top: -5vh;
+  margin-bottom: -1vh;
+}
+
+#message3 {
+  margin-top: 2vh;
+  margin-bottom: -4.5vh;
+  height: 1.5vh;
 }
